# MandelbrotFractal

./: CMakeLists.txt  main.cpp
includes/: Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  Fractal.h  Mandelbrot.h  RGB.h  Zoom.h  ZoomList.h
src/: Bitmap.cpp  Fractal.cpp  Mandelbrot.cpp  RGB.cpp  ZoomList.cpp
